--- a/DML/DML.VM/DML.DTO.csproj
+++ b/DML/DML.VM/DML.DTO.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SaveRnDto.cs" />
+    <Compile Include="RnDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
