--- a/DML/DML.VM/DML.DTO.csproj
+++ b/DML/DML.VM/DML.DTO.csproj
@@ -41,8 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseDto.cs" />
+    <Compile Include="NarutiteljDto.cs" />
+    <Compile Include="PrimateljDto.cs" />
+    <Compile Include="RadilisteDto.cs" />
+    <Compile Include="RegOznakaDto.cs" />
     <Compile Include="RnDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RobuIzdaoDto.cs" />
+    <Compile Include="VozacDto.cs" />
+    <Compile Include="VrstaRobeDto.cs" />
+    <Compile Include="VrstaUslugeDto.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
