--- a/DML/DML.VM/DML.DTO.csproj
+++ b/DML/DML.VM/DML.DTO.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseDto.cs" />
+    <Compile Include="FormLoadDto.cs" />
     <Compile Include="NarutiteljDto.cs" />
     <Compile Include="PrimateljDto.cs" />
     <Compile Include="RadilisteDto.cs" />
