--- a/DML/DML.RadniNalog/DML.RadniNalog.csproj
+++ b/DML/DML.RadniNalog/DML.RadniNalog.csproj
@@ -77,6 +77,12 @@
     <Compile Include="EdditSetting.Designer.cs">
       <DependentUpon>EdditSetting.cs</DependentUpon>
     </Compile>
+    <Compile Include="EditRn.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditRn.Designer.cs">
+      <DependentUpon>EditRn.cs</DependentUpon>
+    </Compile>
     <Compile Include="RadniNalozi.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,6 +93,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="EdditSetting.resx">
       <DependentUpon>EdditSetting.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditRn.resx">
+      <DependentUpon>EditRn.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="RadniNalozi.resx">
       <DependentUpon>RadniNalozi.cs</DependentUpon>
