--- a/DML/DML.RadniNalog/packages.config
+++ b/DML/DML.RadniNalog/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net45" />
+  <package id="System.Linq.Dynamic" version="1.0.7" targetFramework="net45" />
 </packages>
