--- a/DML/DML.Repository/DML.Repository.csproj
+++ b/DML/DML.Repository/DML.Repository.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RadniNalozi\IRnRepository.cs" />
     <Compile Include="RadniNalozi\RnRepository.cs" />
   </ItemGroup>
   <ItemGroup>
